# com.github.mozilla-services.lua_sandbox_extensions-kafka

./: CMakeLists.txt  build_artifact.py
mozilla-kafka/: CMakeLists.txt
mozilla-kafka/installer/lua5.1/: kafka.xml
mozilla-kafka/installer/lua5.4/: kafka.xml
test/lua5.1/: test.lua
